fixed overflow issues

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -33,6 +33,8 @@
     margin-bottom: 50px;
 
     .font-height(17px; 30px);
+
+    overflow: unset;
   }
 
   @media (min-width: @desktop-width) {
