--- a/source/less/blocks/desc.less
+++ b/source/less/blocks/desc.less
@@ -9,7 +9,6 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 110px;
-    grid-auto-flow: column;
 
     .font-height(20px; 22px);
   }
@@ -64,4 +63,40 @@
     rocket: "../../img/icon-5.svg";
     gift: "../../img/icon-6.svg";
   };
+
+  &:nth-child(1) {
+    @media (min-width: @tablet-width) {
+      order: 1;
+    }
+  }
+
+  &:nth-child(2) {
+    @media (min-width: @tablet-width) {
+      order: 3;
+    }
+  }
+
+  &:nth-child(3) {
+    @media (min-width: @tablet-width) {
+      order: 5;
+    }
+  }
+
+  &:nth-child(4) {
+    @media (min-width: @tablet-width) {
+      order: 2;
+    }
+  }
+
+  &:nth-child(5) {
+    @media (min-width: @tablet-width) {
+      order: 4;
+    }
+  }
+
+  &:nth-child(6) {
+    @media (min-width: @tablet-width) {
+      order: 6;
+    }
+  }
 }
